Changes for version 0.2
-----------------------
- Coordinate rename to Coordinates
- add util-class to convert Point in Coordinates
- component draggable now hidden during drag.
- add SwisiMouseEvent immutable implementation
- add component adapters to Swing
- restrict drag and drop to left button by default, strategy let configure that.

Bugs fixed
----------
- fixe drop when use a different button during drag.